Mon Jan  8 21:35:10 2001  Guy Decoux  <decoux@moulon.inra.fr>

	* file.c (path_check_1): should restore modified path.

Sat Jan  6 00:55:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): template "m2" or "u2" caused inifinite loop.

Fri Jan  5 01:02:17 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ruby_finalize): should enclosed by PUSH_TAG/POP_TAG.

Sun Dec 31 01:39:16 2000  Guy Decoux  <decoux@moulon.inra.fr>

	* eval.c (rb_mod_define_method): wrong comparison for blocks.

Sat Dec 30 19:28:50 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (id2ref): should handle Symbol too.

	* gc.c (id2ref): should print original ptr value

Sat Dec 30 03:14:22 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_iterate): NODE_CFUNC does not protect its data
	  (nd_tval), so create new node NODE_IFUNC for iteration C
	  function. 

	* eval.c (rb_yield_0): use NODE_IFUNC.

	* gc.c (rb_gc_mark): support NODE_IFUNC.

Fri Dec 29 11:41:55 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (mem_error): prohibit recursive mem_error().
	  (ruby-bugs-ja:PR#36)

Fri Dec 29 11:05:41 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_fd_writable): should not switch context if
	  rb_thread_critical is set.

	* eval.c (rb_thread_wait_fd): ditto.

	* eval.c (rb_thread_wait_for): ditto.

	* eval.c (rb_thread_select): ditto.

	* eval.c (rb_thread_join): join during critical section causes
	  deadlock. 

Tue Dec 26 18:46:41 2000  NAKAMURA Hiroshi  <nakahiro@sarion.co.jp>

	* lib/debug.rb: Avoid thread deadlock in debugging stopped thread.

	* lib/debug.rb: Uncleared 'finish' state.

Tue Dec 26 16:53:55 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_yield_0): remove dvar node by rb_gc_force_recycle()
	  more eagerly.

	* eval.c (rb_f_binding): recycling should be stopped for outer
	  scope too.

	* eval.c (proc_new): ditto.

Tue Dec 26 15:45:35 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>
