@@ -286,6 +286,9 @@ rb_obj_taint(obj)
     VALUE obj;
 {
     rb_secure(4);
+    if (OBJ_FROZEN(obj)) {
+	rb_error_frozen("object");
+    }
     OBJ_TAINT(obj);
     return obj;
 }
@@ -295,6 +298,13 @@ rb_obj_untaint(obj)
     VALUE obj;
 {
     rb_secure(3);
+Tue Jan  9 17:41:40 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* object.c (rb_obj_taint): check frozen status before modifying
+	  taint status.
+
+	* object.c (rb_obj_untaint): ditto.
+
     FL_UNSET(obj, FL_TAINT);
     return obj;
 }
