@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.2"
-#define RUBY_RELEASE_DATE "2001-01-09"
+#define RUBY_RELEASE_DATE "2001-01-10"
 #define RUBY_VERSION_CODE 162
-#define RUBY_RELEASE_CODE 20010109
+#define RUBY_RELEASE_CODE 20010110
